--- a/Genshin AHK/data/genConfig.ini
+++ b/Genshin AHK/data/genConfig.ini
@@ -89,7 +89,7 @@ GlLanguage=0
 ScRenamer=0
 ScWinrenamer=0
 ScHachCh=0
-ScOverlay=0
+ScOverlay=
 ScRandomT=0
 RegeditExport1=
 RegeditExport2=
@@ -102,6 +102,7 @@ Checkbox1overlay=1
 Checkbox1autowalk=1
 Checkbox1fastlyt=1
 Checkbox1skipNPS=1
+Checkbox1locknpc=0
 Checkbox1autoswim=1
 Checkbox1vi4ersens=1
 Checkbox1animcancel=1
