--- a/Genshin AHK/data/genConfig.ini
+++ b/Genshin AHK/data/genConfig.ini
@@ -9,7 +9,7 @@ key_fastlyt=F
 key_skipNPS=Z
 key_bhop=Space
 key_vi4er_sens=X
-key_autoswim=N
+key_autoT=T
 key_LabelNumpad0=Numpad0
 key_LabelNumpad1=Numpad1
 key_LabelNumpad2=Numpad2
@@ -110,6 +110,8 @@ ExSumK6=0
 ; 17 - XianglingDragonStrike
 ; 18 - Raiden Q DragonStrike
 ; 19 - HuTao E DragonStrike
+; 20 - Diluc DragonStrike
+; 21 - Ganyu more
 OldMacroBackVar=0
 
 ; Последняя открытая вкладка GUI
@@ -128,7 +130,7 @@ AutoExitAHK=0
 IsAdmin=1
 
 ; Скрипт проверяет размер указателя мыши
-FIXchat=0
+FIXchat=1
 
 ; Максимальная производительность
 Highperformancemode=1
@@ -157,7 +159,7 @@ Checkbox1autowalk=1
 Checkbox1fastlyt=1
 Checkbox1skipNPS=1
 Checkbox1locknpc=0
-Checkbox1autoswim=1
+Checkbox1autoT=1
 Checkbox1vi4ersens=1
 Checkbox1animcancel=1
 Checkbox1bhop=1
